<resources>
    <!--Activities name-->
    <string name="app_name">Smile App</string>
    <string name="settings_activity_name">Настройки</string>
    <string name="about_activity_name">О программе</string>

    <!--Settings Activity: TextViews-->
    <string name="setting_what_to_show">Что будем показывать:</string>
    <string name="setting_show_photos">Семейные фотографии</string>
    <string name="setting_show_text">Мотивация и общие умные мысли</string>
    <string name="setting_good_words">Добрые слова:</string>
    <string name="setting_show_text_father">Для папы</string>
    <string name="setting_show_text_mother">Для мамы</string>
    <string name="setting_show_text_Ira">Для Иры</string>
    <string name="setting_show_text_Ilya">Для Ильи</string>
    <string name="setting_show_text_Anna">Для Ани</string>
    <string name="setting_how_to_show">Как будем показывать:</string>
    <string name="setting_in_order">По очереди</string>
    <string name="setting_in_random">В произвольном порядке</string>
    <string name="setting_if_notify">Показывать напоминания:</string>
    <string name="setting_notify_time">Каждый день</string>

    <!--App: Buttons-->
    <string name="apply_settings_button">Применить</string>
    <string name="random_button">Случайная картинка</string>
    <string name="next_button">Следующая</string>
    <string name="prev_button">Предыдущая</string>

    <!--Main Activity: Menu-->
    <string name="settings_menu">Настройки</string>
    <string name="about_menu">О программе</string>

    <!--About Activity: TextViews-->
    <string name="about_version">Версия:</string>
    <string name="about_version_value">3.0</string>
    <string name="about_author">Автор:</string>
    <string name="about_author_value">Фесенко Анна</string>
    <string name="about_images">Количество картинок</string>
    <string name="about_images_funny">Веселые:</string>
    <string name="about_images_family">Фото:</string>
    <string name="about_images_text">Мотивация:</string>
    <string name="about_images_good_words">Добрые слова:</string>
    <string name="about_images_text_father">Для папы:</string>
    <string name="about_images_text_mother">Для мамы:</string>
    <string name="about_images_text_Ira">Для Иры:</string>
    <string name="about_images_text_Ilya">Для Ильи:</string>
    <string name="about_images_text_Anna">Для Ани:</string>
    <string name="about_features">В этой версии:</string>
    <string name="about_features_value">1) \"Умные мысли\" разделились по категориям\n
    2) Добавлены нотификации</string>


    <!--Utils: Channel for notification-->
    <string name="channel_name">Channel name</string>
    <string name="channel_description">Channel description</string>
    <string name="channel_ID">channelID</string>
    <!--Utils: SharedPreferences / Intent for/from SettingsActivity-->
    <string name="file_name">smileAppSharedPreferences</string>
    <string name="photo">photoSetting</string>
    <string name="text">textSetting</string>
    <string name="father">textFatherSetting</string>
    <string name="mother">textMotherSetting</string>
    <string name="ira">textIraSetting</string>
    <string name="ilya">textIlyaSetting</string>
    <string name="anna">textAnnaSetting</string>
    <string name="random">randomSetting</string>
    <string name="notification">notificationSetting</string>
    <string name="time">timeSetting</string>


    <!--Utils: Integers-->
    <integer name="requestID">0</integer> <!--To call SettingActivity-->
    <integer name="requestAboutID">1</integer> <!--To call AboutActivity-->
    <integer name="notificationID">123</integer> <!--To call notification-->


</resources>